--- a/vector2d.ipynb
+++ b/vector2d.ipynb
@@ -47,7 +47,7 @@
      "data": {
       "text/plain": "Vector(4, 5)"
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,12 +62,40 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-01T20:40:25.266293Z",
-     "start_time": "2024-03-01T20:40:25.260501Z"
+     "end_time": "2024-03-01T21:01:47.385481Z",
+     "start_time": "2024-03-01T21:01:47.381845Z"
     }
    },
    "id": "d983d50224e83165",
-   "execution_count": 9
+   "execution_count": 17
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Vector(5, 6)"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v4 = Vector(1, 1)\n",
+    "\n",
+    "v5 = v4 + v3\n",
+    "v5"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-01T21:02:21.046385Z",
+     "start_time": "2024-03-01T21:02:21.042786Z"
+    }
+   },
+   "id": "7609ad8beed6f9eb",
+   "execution_count": 19
   },
   {
    "cell_type": "code",
@@ -102,23 +130,23 @@
      "data": {
       "text/plain": "Vector(9, 12)"
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "v * 3"
+    "v * 3\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-01T20:41:02.917637Z",
-     "start_time": "2024-03-01T20:41:02.912667Z"
+     "end_time": "2024-03-01T20:55:35.723151Z",
+     "start_time": "2024-03-01T20:55:35.717154Z"
     }
    },
    "id": "474e4e67d786dc2d",
-   "execution_count": 13
+   "execution_count": 15
   },
   {
    "cell_type": "code",
